--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       <h3 id="starving">Im Starving!! Feed me before I pass!!</h3>
       <button type="button" class="btn btn-danger" id="feed">Feed</button>
       <button type="button" class="btn btn-info restart">New Game</button>
+      <img id='popUp' src="https://s7d5.scene7.com/is/image/UrbanOutfitters/51954956_000_b?$xlarge$&hei=900&qlt=80&fit=constrain" alt="tomagotachi in hands">
     </div>
 
   </div>
