add pokemon API

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       <button type="button" class="btn btn-danger" id="feed">Feed</button>
       <button type="button" class="btn btn-info restart">New Game</button>
       <img id='popUp' src="https://s7d5.scene7.com/is/image/UrbanOutfitters/51954956_000_b?$xlarge$&hei=900&qlt=80&fit=constrain" alt="tomagotachi in hands">
+      <img id="showWeedle" src="" alt="">
     </div>
 
   </div>
